--- a/src/project.json
+++ b/src/project.json
@@ -76,7 +76,7 @@
     "name": "Password Generator App",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
     "lang": "react",
-    "website": "https://www.google.com/",
+    "website": "https://password-generator-gamma-lyart-59.vercel.app/",
     "githubLink": "https://github.com/kaanygit/password-generator"
   }
 ]
