--- a/src/project.json
+++ b/src/project.json
@@ -60,7 +60,7 @@
     "name": "QR Code",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
     "lang": "react",
-    "website": "https://www.google.com/",
+    "website": "https://qr-code-generator-ten-rho.vercel.app/",
     "githubLink": "https://github.com/kaanygit/qr-code-generate"
   },
   {
