tailwind finishing touches

--- a/src/project.json
+++ b/src/project.json
@@ -3,7 +3,7 @@
     "id": 1,
     "name": "Calculator",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react"],
     "website": "https://www.google.com/",
     "githubLink": "https://github.com/kaanygit/Calculator-React.Js"
   },
@@ -11,7 +11,7 @@
     "id": 2,
     "name": "Recipe App",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react"],
     "website": "https://www.google.com/",
     "githubLink": "https://github.com/kaanygit/RecideApp-React.js"
   },
@@ -19,39 +19,39 @@
     "id": 3,
     "name": "ToDo App",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react"],
     "website": "https://www.google.com/",
-    "githubLink": "https://www.google.com/"
+    "githubLink": "https://github.com/kaanygit/react-todo-app"
   },
   {
     "id": 4,
-    "name": "Whatsapp Clone",
+    "name": "VividChat",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react","firebase"],
     "website": "https://www.google.com/",
-    "githubLink": "https://www.google.com/"
+    "githubLink": "https://github.com/kaanygit/VividChat"
   },
   {
     "id": 5,
-    "name": "Music Player",
+    "name": "Harmoniyo",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react","tailwind","firebase"],
     "website": "https://www.google.com/",
-    "githubLink": "https://www.google.com/"
+    "githubLink": "https://github.com/kaanygit/harmoniyo"
   },
   {
     "id": 6,
     "name": "Weather Application",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react","tailwind"],
     "website": "https://www.google.com/",
-    "githubLink": "https://www.google.com/"
+    "githubLink": "https://github.com/kaanygit/weather-app-react"
   },
   {
     "id": 7,
     "name": "Course Application",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react"],
     "website": "https://www.google.com/",
     "githubLink": "https://www.google.com/"
   },
@@ -59,16 +59,33 @@
     "id": 8,
     "name": "QR Code",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
-    "website": "https://www.google.com/",
-    "githubLink": "https://www.google.com/"
+    "lang": ["react"],
+    "website": "https://qr-code-generator-ten-rho.vercel.app/",
+    "githubLink": "https://github.com/kaanygit/qr-code-generate"
   },
   {
     "id": 9,
     "name": "Movie Review App",
     "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
-    "lang": "react",
+    "lang": ["react","tailwind"],
     "website": "https://www.google.com/",
     "githubLink": "https://www.google.com/"
+  },
+  {
+    "id": 10,
+    "name": "Password Generator App",
+    "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
+    "lang": ["react"],
+    "website": "https://password-generator-gamma-lyart-59.vercel.app/",
+    "githubLink": "https://github.com/kaanygit/password-generator"
+  }
+  ,
+  {
+    "id": 11,
+    "name": "Portfolio-Page",
+    "imageUrl": "https://e1.pxfuel.com/desktop-wallpaper/588/103/desktop-wallpaper-best-4-software-developer-backgrounds-on-hip-software-engineer.jpg",
+    "lang": ["react","tailwind"],
+    "website": "https://kaanygit.vercel.app/",
+    "githubLink": "https://github.com/kaanygit/kaanygit-portfolio"
   }
 ]
