--- a/package.json
+++ b/package.json
@@ -7,21 +7,40 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.17",
+    "@material-tailwind/react": "^2.0.6",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^29.5.3",
+    "@types/node": "^20.4.2",
+    "@types/react": "^18.2.15",
+    "@types/react-dom": "^18.2.7",
     "css": "^3.0.0",
+    "dotenv": "^16.3.1",
     "firebase": "^9.19.1",
     "font-awesome": "^4.7.0",
+    "os-browserify": "^0.3.0",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
+    "react-redux": "^8.1.1",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
+    "redux-saga": "^1.2.3",
     "remixicon": "^3.0.0",
+    "reselect": "^4.1.8",
     "sass": "^1.60.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "fork-ts-checker-webpack-plugin": "^6.5.3",
+    "@typescript-eslint/typescript-estree": "^5.57.1",
+    "typescript": "^5.1.6"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -48,6 +67,8 @@
     ]
   },
   "devDependencies": {
+    "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.26",
     "tailwindcss": "^3.3.2"
   }
 }
