--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "css": "^3.0.0",
-    "dotenv": "^16.3.1",
+    "dotenv-webpack": "^8.0.1",
     "firebase": "^9.19.1",
     "font-awesome": "^4.7.0",
     "os-browserify": "^0.3.0",
@@ -33,7 +33,6 @@
     "redux-saga": "^1.2.3",
     "remixicon": "^3.0.0",
     "reselect": "^4.1.8",
-    "sass": "^1.60.0",
     "styled-components": "^5.3.9",
     "web-vitals": "^2.1.4"
   },
