--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
       },
       "noEmit": true,
       "resolveJsonModule": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,    
     },
     "include": ["src"]
   }
