--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,27 @@
 {
-    "compilerOptions": {
-      "target": "es6",
-      "module": "esnext",
-      "jsx": "react-jsx",
-      "strict": true,
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "baseUrl": "./src",
-      "paths": {
-        "*": ["types/*"]
-      },
-      "noEmit": true,
-      "resolveJsonModule": true,
-      "skipLibCheck": true,    
-    },
-    "include": ["src"]
-  }
-  
+  "compilerOptions": {
+    "target": "es5",
+    "lib": ["dom", "dom.iterable", "esnext"],
+    "allowJs": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "noEmit": true,
+    "esModuleInterop": true,
+    "module": "esnext",
+    "moduleResolution": "bundler",
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "preserve",
+    "incremental": true,
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
+  },
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "exclude": ["node_modules"]
+}
