Redux and redux-persist are integrated into the application

--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.2",
-    "dotenv": "^16.3.1",
-    "mongodb": "^6.1.0",
-    "mongoose": "^7.5.2",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
-    "react-icons": "^4.11.0"
+    "react-redux": "^8.1.2",
+    "redux": "^4.2.1",
+    "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
+    "@types/redux-logger": "^3.0.10",
+    "@types/redux-persist": "^4.3.1",
     "autoprefixer": "latest",
     "postcss": "latest",
     "tailwindcss": "latest",
