--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@material-tailwind/react": "^2.1.2",
+    "axios": "^1.5.1",
     "dotenv": "^16.3.1",
     "mongoose": "^7.5.3",
     "next": "latest",
