--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^8.1.2",
     "redux": "^4.2.1",
     "redux-logger": "^3.0.6",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "supports-color": "^8.1.1"
   },
   "devDependencies": {
     "@types/node": "latest",
